--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.3.0"
+    "@openzeppelin/contracts": "^5.3.0",
+    "@vlayer/sdk": "^1.2.3-nightly-20250702-92238a4b517821d3fc21b9b5fcb488539c62ddf0"
   }
 }
